--- a/css/app.css
+++ b/css/app.css
@@ -1,23 +1,14 @@
-#background{
+#title-background{
 
 	background-color: #2636C7;
 	color: white;
 }
 
-#boton{
-	display: inline-block;
-  vertical-align: middle;
-  margin: 0 0 1rem 0;
-  font-family: inherit;
-  padding: 0.85em 1em;
-  -webkit-appearance: none;
-  border: 1px solid transparent;
-  border-radius: 0;
-  transition: background-color 0.25s ease-out, color 0.25s ease-out;
-  font-size: 0.9rem;
-  line-height: 1;
-  text-align: center;
-  cursor: pointer;
-  background-color: #1779ba;
-  color: #fefefe; 
+#tab-bar-background{
+  background-color: #d7ecfa;
+}
+
+#box{
+  background-color: white;
+  width: 68%;
 }
