--- a/css/app.css
+++ b/css/app.css
@@ -1,12 +1,7 @@
-#title-background{
-
-	background-color: #2636C7;
-	color: white;
-}
-
 #box{
   background-color: white;
   width: 68%;
   border: none;
   text-align: left;
+  margin: 2%;
 }
